# dengo-merge

./: .buildinfo  .gitignore  .hg_archival.txt  .hgignore  .hgtags  .pre-commit-config.yaml  .travis.yml  Makefile  README  README.md  Rate.py  api.html  buildingBlock.html  c_example.html  chemical_network.py  compare_grackle.html  content.html  create_ics.py  distribute-0.6.14-py2.7.egg  distribute_setup.py  exceptions.py  genindex.html  install-chiantipy.sh  install-cvode.sh  install-cvode3.1.sh  install-grackle.sh  install-hdf5.sh  install-suitesparse.sh  install-yt.sh  install.sh  intro.html  landing.html  markdown.html  notebooks.html  objects.inv  oxygen_initial_conditions.h5  oxygen_solver.C  oxygen_solver.h  oxygen_solver_main.C  oxygen_solver_main.py  (+23 more)
.ipynb_checkpoints/: cache_dengo_testing-checkpoint.ipynb
_modules/: index.html
_sources/: api.rst  buildingBlock.ipynb  c_example.ipynb  landing.md  simpleNetwork.ipynb
building_blocks/: CreateANetwork.html  CreateCoolingFunction.html  CreateReaction.html  CreateSpecies.html  SimpleNetwork.html
cookbook/: _config.yml  _toc.yml  be_chem_solve.ipynb  c_example.ipynb  compare_grackle.ipynb  notebooks.ipynb  threebody-check.ipynb  tutorial.md  workWithHydroSims.ipynb
cvode_templates/: cvode_solver.c.template  enzo_primordial_cvode_solver.c.template  primordial_cvode_solver.c.template  rates_and_rate_tables.h
dengo/: CO_rates.py  C_rates.py  H2O_rates.py  H2_rates.py  H_rates.py  O2_rates.py  OH_rates.py  O_rates.py  RATE12.txt  Rate.py  (+33 more)
dengo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+947 files in other folders)
