[metadata]
name = dengo
version = 0.2.0
description = A framework for creating chemical and radiative cooling reaction networks
liscense = GPL-3
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
keywords= astronomy astrophysics chemistry
author= Sunny Tang, Matthew J. Turk
author_email=hisunnytang@gmail.com, matthewturk@gmail.com
url = https://github.com/hisunnytang/dengo-merge
long_description = file: README

[options]
package_dir =
    = dengo
packages = find:
python_requires = >= 3.6
install_requires = 
    ChiantiPy>=0.12.0
    docutils>=0.16
    h5py>=3.6.0
    Jinja2>=3.0.3
    numpy>=1.18.5
    setuptools>=62.3.2
    sympy>=1.10.1
    matplotlib>=3.5.2
    pytest>=7.1.2
    yt>=4.0.4

[options.packages.find]
where=dengo

